# solarboard-code

./: CMakeLists.txt
main/: CMakeLists.txt  errors.h  main.cpp
main/i2c/: I2C.cpp  I2C.h  INA229.c
main/solarboard/: solarboard.cpp  solarboard.h
main/spi/: INA229Q1.cpp  INA229Q1.h  SPI.cpp  SPI.h
